--- a/ruff.toml
+++ b/ruff.toml
@@ -42,6 +42,8 @@ target-version = "py39"
 select = ["E4", "E7", "E9", "F"]
 extend-select = ["E501","N","R","I"]
 ignore = ["F401"]
+# Ignore line length for files in src/prompts directory
+per-file-ignores = {"src/prompts/*" = ["E501"]}
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
